resolved content overflow

--- a/src/components/css/Hero.css
+++ b/src/components/css/Hero.css
@@ -13,9 +13,14 @@
 	font-weight: bold;
 	padding: 65vh 0 20vh 0;
 }
+.hero__heading{
+    font-weight: bolder;
+    font-size: 2em;
+}
 .hero__heading,
 .hero__subheading {
 	font-family: "Nanum Myeongjo", serif;
+    font-weight: bold;
 	color: #c4bdb6;
 	text-shadow: -2px 2px #1a0c06;
     margin: 2%;
