--- a/src/components/css/Nav.css
+++ b/src/components/css/Nav.css
@@ -1,6 +1,5 @@
 .navWrapper {
 	width: 100vw;
-	position: fixed;
 	background-color: #a5acb182;
 	z-index: 1;
 }
