--- a/src/components/css/Projects.css
+++ b/src/components/css/Projects.css
@@ -115,3 +115,6 @@
     bottom: -8px;
     left: -8px;
 }
+.animation__container{
+    overflow: hidden;
+}
